# gcc-base-build

./: 3rdparty_install.sh  CMakeLists.txt  README.md
docker/: Dockerfile  build.sh
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  example1.cpp
